@@ -20,7 +20,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
@@ -48,6 +50,7 @@ import com.vaadin.flow.component.page.Page;
 import com.vaadin.flow.component.page.PendingJavaScriptResult;
 import com.vaadin.flow.dom.Element;
 import com.vaadin.flow.internal.ReflectTools;
+import com.vaadin.flow.internal.UsageStatistics;
 import com.vaadin.flow.router.AfterNavigationEvent;
 import com.vaadin.flow.router.AfterNavigationObserver;
 import com.vaadin.flow.router.BeforeEnterEvent;
@@ -65,17 +68,18 @@ import com.vaadin.flow.router.RouteConfiguration;
 import com.vaadin.flow.router.Router;
 import com.vaadin.flow.router.RouterLayout;
 import com.vaadin.flow.router.TestRouteRegistry;
+import com.vaadin.flow.server.Constants;
 import com.vaadin.flow.server.MockInstantiator;
 import com.vaadin.flow.server.MockVaadinContext;
 import com.vaadin.flow.server.MockVaadinServletService;
 import com.vaadin.flow.server.MockVaadinSession;
 import com.vaadin.flow.server.RouteRegistry;
 import com.vaadin.flow.server.ServiceException;
+import com.vaadin.flow.server.WrappedSession;
 import com.vaadin.flow.server.startup.ApplicationRouteRegistry;
 import com.vaadin.tests.util.AlwaysLockedVaadinSession;
 import com.vaadin.tests.util.MockDeploymentConfiguration;
 import com.vaadin.tests.util.MockUI;
-
 import elemental.json.Json;
 import elemental.json.JsonValue;
 
@@ -114,8 +118,8 @@ public class NavigationStateRendererTest {
     }
 
     @Route(value = "regular")
-    private static class RegularView extends Text {
-        RegularView() {
+    public static class RegularView extends Text {
+        public RegularView() {
             super("");
         }
     }
@@ -125,6 +129,8 @@ public class NavigationStateRendererTest {
     private static class PreservedLayout extends Component
             implements RouterLayout {
         PreservedLayout() {
+            addAttachListener(e -> layoutAttachCount.getAndIncrement());
+            layoutUUID = UUID.randomUUID().toString();
         }
     }
 
@@ -133,6 +139,8 @@ public class NavigationStateRendererTest {
     private static class PreservedNestedView extends Text {
         PreservedNestedView() {
             super("");
+            addAttachListener(e -> viewAttachCount.getAndIncrement());
+            viewUUID = UUID.randomUUID().toString();
         }
     }
 
@@ -222,7 +230,8 @@ public class NavigationStateRendererTest {
         NavigationStateRenderer renderer = new NavigationStateRenderer(
                 navigationStateFromTarget(ChildConfiguration.class));
 
-        Component routeTarget = renderer.getRouteTarget(Component.class, event);
+        Component routeTarget = renderer.getRouteTarget(Component.class, event,
+                true);
 
         Assert.assertEquals(Text.class, routeTarget.getClass());
 
@@ -262,7 +271,7 @@ public class NavigationStateRendererTest {
                     .get(0);
 
             Component routeTarget = renderer.getRouteTarget(ProxyableView.class,
-                    event);
+                    event, true);
 
             // Getting route target should not create a new instance
             Assert.assertEquals(
@@ -275,8 +284,13 @@ public class NavigationStateRendererTest {
     }
 
     @Route("parent")
+    @Tag("div")
     private static class RouteParentLayout extends Component
             implements RouterLayout {
+        RouteParentLayout() {
+            addAttachListener(e -> layoutAttachCount.getAndIncrement());
+            layoutUUID = UUID.randomUUID().toString();
+        }
     }
 
     @ParentLayout(RouteParentLayout.class)
@@ -290,7 +304,12 @@ public class NavigationStateRendererTest {
     }
 
     @Route(value = "single", layout = RouteParentLayout.class)
+    @Tag("div")
     private static class SingleView extends Component {
+        SingleView() {
+            addAttachListener(e -> viewAttachCount.getAndIncrement());
+            viewUUID = UUID.randomUUID().toString();
+        }
     }
 
     @Test
@@ -307,8 +326,8 @@ public class NavigationStateRendererTest {
 
         // given the session has a cache of something at this location
         AbstractNavigationStateRenderer.setPreservedChain(session, "",
-                new Location("preserved"),
-                new ArrayList<>(Arrays.asList(Mockito.mock(Component.class))));
+                new Location("preserved"), new ArrayList<>(Collections
+                        .singletonList(Mockito.mock(Component.class))));
 
         // given a UI that contain no window name with an instrumented Page
         // that records JS invocations
@@ -475,8 +494,7 @@ public class NavigationStateRendererTest {
         // given the session has a cache of PreservedView at this location
         final PreservedView view = new PreservedView();
         AbstractNavigationStateRenderer.setPreservedChain(session, "ROOT.123",
-                new Location("preserved"),
-                new ArrayList<>(Arrays.asList(view)));
+                new Location("preserved"), new ArrayList<>(List.of(view)));
 
         // given an old UI that contains the component and an extra element
         MockUI ui0 = new MockUI(session);
@@ -522,8 +540,7 @@ public class NavigationStateRendererTest {
                         .withTarget(PreservedNestedView.class)
                         .withPath("preservedNested").build());
         router.getRegistry().setRoute("preservedNested",
-                PreservedNestedView.class,
-                Arrays.asList(PreservedLayout.class));
+                PreservedNestedView.class, List.of(PreservedLayout.class));
 
         // given the session has a cache of PreservedNestedView at this location
         final PreservedLayout layout = new PreservedLayout();
@@ -583,7 +600,7 @@ public class NavigationStateRendererTest {
                 new Location(path,
                         new QueryParameters(Collections.singletonMap("a",
                                 Collections.emptyList()))),
-                new ArrayList<>(Arrays.asList(view)));
+                new ArrayList<>(List.of(view)));
 
         ExtendedClientDetails details = Mockito
                 .mock(ExtendedClientDetails.class);
@@ -604,6 +621,119 @@ public class NavigationStateRendererTest {
 
         Assert.assertFalse(ui.isClosing());
         Assert.assertEquals(0, count.get());
+    }
+
+    private static AtomicInteger layoutAttachCount;
+    private static AtomicInteger viewAttachCount;
+    private static String layoutUUID;
+    private static String viewUUID;
+
+    @Test
+    public void handle_preserveOnRefreshView_refreshCurrentRouteRecreatesComponents() {
+        layoutAttachCount = new AtomicInteger();
+        viewAttachCount = new AtomicInteger();
+
+        // given a service with instantiator
+        MockVaadinServletService service = createMockServiceWithInstantiator();
+
+        // given a locked session
+        MockVaadinSession session = new AlwaysLockedVaadinSession(service);
+        session.setConfiguration(new MockDeploymentConfiguration());
+
+        // given a NavigationStateRenderer mapping to PreservedNestedView
+        Router router = session.getService().getRouter();
+        NavigationStateRenderer renderer = new NavigationStateRenderer(
+                new NavigationStateBuilder(router)
+                        .withTarget(PreservedNestedView.class)
+                        .withPath("preservedNested").build());
+        router.getRegistry().setRoute("preservedNested",
+                PreservedNestedView.class, List.of(PreservedLayout.class));
+
+        // given a UI that contain a window name ROOT.123
+        MockUI ui = new MockUI(session);
+        ExtendedClientDetails details = Mockito
+                .mock(ExtendedClientDetails.class);
+        Mockito.when(details.getWindowName()).thenReturn("ROOT.123");
+        ui.getInternals().setExtendedClientDetails(details);
+
+        // when a navigation event reaches the renderer
+        renderer.handle(
+                new NavigationEvent(router, new Location("preservedNested"), ui,
+                        NavigationTrigger.PAGE_LOAD));
+
+        String currentLayoutUUID = layoutUUID;
+        String currentViewUUID = viewUUID;
+
+        Assert.assertEquals(1, layoutAttachCount.get());
+        Assert.assertEquals(1, viewAttachCount.get());
+
+        ui.getInternals().clearLastHandledNavigation();
+
+        // Should recreate route component only
+        ui.refreshCurrentRoute(false);
+        Assert.assertEquals(1, layoutAttachCount.get());
+        Assert.assertEquals(2, viewAttachCount.get());
+        Assert.assertEquals(currentLayoutUUID, layoutUUID);
+        Assert.assertNotEquals(currentViewUUID, viewUUID);
+        currentViewUUID = viewUUID;
+
+        // Should recreate route component and parent layout
+        ui.refreshCurrentRoute(true);
+        Assert.assertEquals(2, layoutAttachCount.get());
+        Assert.assertEquals(3, viewAttachCount.get());
+        Assert.assertNotEquals(currentLayoutUUID, layoutUUID);
+        Assert.assertNotEquals(currentViewUUID, viewUUID);
+
+    }
+
+    @Test
+    public void handle_normalView_refreshCurrentRouteRecreatesComponents() {
+        layoutAttachCount = new AtomicInteger();
+        viewAttachCount = new AtomicInteger();
+
+        // given a service with instantiator
+        MockVaadinServletService service = createMockServiceWithInstantiator();
+
+        // given a locked session
+        MockVaadinSession session = new AlwaysLockedVaadinSession(service);
+        session.setConfiguration(new MockDeploymentConfiguration());
+
+        // given a NavigationStateRenderer mapping to PreservedNestedView
+        Router router = session.getService().getRouter();
+        NavigationStateRenderer renderer = new NavigationStateRenderer(
+                new NavigationStateBuilder(router).withTarget(SingleView.class)
+                        .withPath("single").build());
+        router.getRegistry().setRoute("single", SingleView.class,
+                List.of(RouteParentLayout.class));
+
+        MockUI ui = new MockUI(session);
+
+        renderer.handle(new NavigationEvent(router, new Location("single"), ui,
+                NavigationTrigger.PAGE_LOAD));
+
+        String currentLayoutUUID = layoutUUID;
+        String currentViewUUID = viewUUID;
+
+        Assert.assertEquals(1, layoutAttachCount.get());
+        Assert.assertEquals(1, viewAttachCount.get());
+
+        ui.getInternals().clearLastHandledNavigation();
+
+        // Should recreate route component only
+        ui.refreshCurrentRoute(false);
+        Assert.assertEquals(1, layoutAttachCount.get());
+        Assert.assertEquals(2, viewAttachCount.get());
+        Assert.assertEquals(currentLayoutUUID, layoutUUID);
+        Assert.assertNotEquals(currentViewUUID, viewUUID);
+        currentViewUUID = viewUUID;
+
+        // Should recreate route component and parent layout
+        ui.refreshCurrentRoute(true);
+        Assert.assertEquals(2, layoutAttachCount.get());
+        Assert.assertEquals(3, viewAttachCount.get());
+        Assert.assertNotEquals(currentLayoutUUID, layoutUUID);
+        Assert.assertNotEquals(currentViewUUID, viewUUID);
+
     }
 
     private MockVaadinServletService createMockServiceWithInstantiator() {
@@ -726,5 +856,85 @@ public class NavigationStateRendererTest {
         Assert.assertFalse(
                 "No pushState invocation is expected when navigating to the current location.",
                 pushStateCalled.get());
+    }
+
+    @Test
+    public void purgeInactiveUIPreservedChainCache_activeUI_throws() {
+        MockVaadinServletService service = createMockServiceWithInstantiator();
+        MockVaadinSession session = new AlwaysLockedVaadinSession(service);
+
+        MockUI activeUI = new MockUI(session);
+        Component attachedToActiveUI = new PreservedView();
+        activeUI.add(attachedToActiveUI);
+
+        Assert.assertThrows(IllegalStateException.class,
+                () -> AbstractNavigationStateRenderer
+                        .purgeInactiveUIPreservedChainCache(activeUI));
+
+    }
+
+    @Test
+    public void purgeInactiveUIPreservedChainCache_inactiveUI_clearsCache() {
+        MockVaadinServletService service = createMockServiceWithInstantiator();
+        WrappedSession wrappedSession = Mockito.mock(WrappedSession.class);
+        Mockito.when(wrappedSession.getId()).thenReturn("A-SESSION-ID");
+        MockVaadinSession session = new AlwaysLockedVaadinSession(service) {
+            @Override
+            public WrappedSession getSession() {
+                return wrappedSession;
+            }
+        };
+
+        MockUI activeUI = new MockUI(session);
+        Component attachedToActiveUI = new PreservedView();
+        activeUI.add(attachedToActiveUI);
+
+        MockUI inActiveUI = new MockUI(session);
+        Component attachedToInactiveUI = new PreservedView();
+        inActiveUI.add(attachedToInactiveUI);
+        inActiveUI.close();
+
+        // Simulate two tabs on the same view, but one has been closed
+        Location location = new Location("preserved");
+        AbstractNavigationStateRenderer.setPreservedChain(session, "ACTIVE",
+                location,
+                new ArrayList<>(Collections.singletonList(attachedToActiveUI)));
+        AbstractNavigationStateRenderer.setPreservedChain(session, "INACTIVE",
+                location, new ArrayList<>(
+                        Collections.singletonList(attachedToInactiveUI)));
+
+        AbstractNavigationStateRenderer
+                .purgeInactiveUIPreservedChainCache(inActiveUI);
+
+        Optional<ArrayList<HasElement>> active = AbstractNavigationStateRenderer
+                .getPreservedChain(session, "ACTIVE", location);
+        Assert.assertTrue(
+                "Expected preserved chain for active window to be present",
+                active.isPresent());
+
+        Optional<ArrayList<HasElement>> inactive = AbstractNavigationStateRenderer
+                .getPreservedChain(session, "INACTIVE", location);
+        Assert.assertFalse(
+                "Expected preserved chain for inactive window to be removed",
+                inactive.isPresent());
+
+    }
+
+    @Test
+    public void getRouteTarget_usageStatistics() {
+        MockVaadinServletService service = new MockVaadinServletService();
+        MockUI ui = new MockUI(new AlwaysLockedVaadinSession(service));
+        NavigationEvent event = new NavigationEvent(
+                new Router(new TestRouteRegistry()), new Location("home"), ui,
+                NavigationTrigger.UI_NAVIGATE);
+        NavigationStateRenderer renderer = new NavigationStateRenderer(
+                navigationStateFromTarget(RegularView.class));
+
+        UsageStatistics.removeEntry(Constants.STATISTICS_FLOW_ROUTER);
+
+        renderer.handle(event);
+
+        Assert.assertTrue(UsageStatistics.getEntries().anyMatch(entry -> entry
+                .getName().equals(Constants.STATISTICS_FLOW_ROUTER)));
     }
 }
